check for invalid tab number, fdo#51667

Change-Id: I9aebfafb68850130088658535f289f66d49f1741
Signed-off-by: Eike Rathke <erack@redhat.com>